add docs named architecture

--- a/site/content/en/blog/releases/v1.0.1.md
+++ b/site/content/en/blog/releases/v1.0.1.md
@@ -4,7 +4,7 @@ linkTitle: "Release v1.0.1"
 weight: 10
 date: 2022-03-08
 description: >
-  Fix bug of codec!
+  Fix bug of `codec`!
 ---
 
 Fix the bug that the user can,t directly added the encoder and decoder through RestClientBuilder!
